# 31-aircraft-anti-icing

./: CMakeLists.txt  README.md  main.cpp
include/bc/: boundary_conditions.h
include/common/: grid.h  parallel_utils.h  types.h
include/coupling/: staggered_coupler.h
include/fem/: heat_conduction_solver.h
include/fvm/: pipe_flow_solver.h
include/levelset/: level_set_solver.h
include/solver/: anti_icing_solver.h
src/bc/: boundary_conditions.cpp
src/common/: grid.cpp
src/coupling/: staggered_coupler.cpp
src/fem/: heat_conduction_solver.cpp
src/fvm/: pipe_flow_solver.cpp
src/levelset/: level_set_solver.cpp
src/solver/: anti_icing_solver.cpp
tests/: CMakeLists.txt  test_coupling.cpp  test_fem.cpp  test_fvm.cpp
